assign eip_pub_sub.tf
 resource "aws_eip" "one" {
   vpc                       = true
   network_interface         = aws_network_interface.web-server-nic.id
   associate_with_private_ip = "10.0.2.50"
   depends_on                = [aws_internet_gateway.sm-project-gw]
 }
