vpc.tf
resource "aws_vpc" "sm-project" {
  cidr_block = "10.0.0.0/16"
  tags = {
   Name = "sm-project"
 }
}
